Added element for adverting

--- a/index.html
+++ b/index.html
@@ -83,6 +83,12 @@
       </div>
     </section>
 
+
+    <div class="top_content">
+      <h1>Lorem ipsum, dolor sit amet consectetur</h1>
+      <p>10 hr</p>
+    </div>
+
     <header class="tree">
       <h4>Your Homepage</h4>
       <h2>Your Content.</h2>
